# imsg

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/source/: conf.py
imessage_reader/: cli.py  common.py  create_sqlite.py  data_access.py  export_excel.py  export_sqlite.py  fetch_data.py  info.py  message.py  platform_finder.py  write_excel.py
imessage_reader/tests/: test_cli.py  test_data_access.py  test_export_excel.py  test_export_sqlite.py  test_message.py  test_platform_finder.py
src/: cli.py  data_access.py  export_csv.py  export_excel.py  export_sqlite.py  info.py  message.py  platform_finder.py  version.py
tests/: test_cli.py  test_data_access.py  test_export_csv.py  test_export_excel.py  test_export_sqlite.py  test_fetch_data.py  test_message.py  test_message_data.py  test_platform_finder.py  test_write_excel.py
