[tool.poetry]
name = "imsg"
version = "1.0.0"
description = ""
authors = ["Khai Nguyen <1192669+khaister@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.2"
setuptools = "^69.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.4"

[build-system]
requires = ["setuptools>=69.5"]
build-backend = "setuptools.build_meta"

[project]
name = "imsg"
version = "1.0.0"
authors = [
  { name="Khai Nguyen", email="1192669+khaister@users.noreply.github.com" },
]
description = "A library for reading iMessage data"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/khaister/imsg"
Issues = "https://github.com/khaister/imsg/issues"